# vodscout

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  SPEC.md  pyproject.toml
tests/: test_actions.py  test_analyzer.py  test_favorites.py  test_fetcher.py  test_ui.py  test_vodlist.py  test_watched.py
vodchat/: _fixtures.py  actions.py  analyzer.py  cli.py  config.py  favorites.py  fetcher.py  ui.py  vodlist.py  watched.py
vodscout/: actions.py  analyzer.py  cli.py  config.py  fetcher.py  ui.py  vodlist.py  watched.py
