[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vodscout"
version = "0.1.0"
description = "CLI tool to download Twitch VOD chat logs and find interesting moments you haven't watched yet."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Costa Walcott" }]
requires-python = ">=3.11"
dependencies = [
    "click",
    "tomlkit",
    "rich",
    "requests>=2.34.2",
    "textual>=8.2.7",
]

[project.urls]
Homepage = "https://github.com/cwalcott/vodscout"
Repository = "https://github.com/cwalcott/vodscout"

[project.scripts]
vodscout = "vodscout.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
